# local-agent

./: .dockerignore  .env.example  .gitignore  .tmp_claude_followup_review.md  .tmp_claude_followup_review.py  .tmp_claude_pwasher_profile.py  .tmp_claude_review.py  .tmp_claude_website_review.md  .tmp_claude_website_review.py  .tmp_daily_diag.py  .tmp_run_daily_diag.py  .tmp_run_daily_diag_result.json  DESKTOP_EXECUTION_WORKFLOW.md  Dockerfile  FINAL_MODEL_REPORT.md  FINAL_SYSTEM_PRODUCT_SPEC.md  GO_LIVE_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  ITERATION_LOOP_SUMMARY.md  MISTRAL_DEPLOYMENT_STRATEGY.md  MODEL_COMPARISON_RESULTS.md  MODEL_UPGRADE_GUIDE.md  README.md  REFACTOR_AUDIT.md  SPECIFICATION.md  SUMMARY.md  V1_EXECUTION_SCOPE.md  WORK_COMPLETED_TODAY.md  agentPersonaGuid.md  clean_restart.py  pyproject.toml
agents/: admin.yaml  cad_rnd.yaml  codex.yaml  pwasher_maketing.yaml  pwasher_marketing.yaml  rw_wix_agent.yaml  software_dev.yaml  software_marketing.yaml  supervisor.yaml
config/: policy.yaml  retrieval.yaml  workspaces.yaml
prompts/: alibre_toolcall_patch_prompt.txt  critic.txt  final_memo.txt  intake.txt  planner.txt  research.txt  telegram_self_modify_workspace_prompt.txt
scripts/: compare_models.py  cron_run.py  deploy_chat_bridge_cloudrun.ps1  local_chat_webhook_smoketest.ps1  run_daily_simple.py  run_telegram_bot.py
state/: autonomy_profiles.json  interactions.jsonl  lessons.json  owner_profile.json  pending_approvals.json
tests/: test_admin_orchestrator.py  test_business_plan_workflow.py  test_capability_tiers.py  test_fabrication_guard.py  (+11 more)
(+64 files in other folders)
