[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agent"
version = "0.1.0"
description = "Minimal local agent scaffold (Ollama workers + Claude supervisor) with cron-style entrypoint."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"