[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agent"
version = "0.1.0"
description = "Windows-first AI operations orchestration platform with hosted/local model routing, approvals, retrieval, and Telegram remote control."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "ollama>=0.3",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "rich>=13.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
